<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/txtPhoneNumber"
        android:text="@string/txtUsernameLogin"
        android:textColor="#232222"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_above="@+id/edtUsernameLogin"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtUsernameLogin"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="3dp"
        android:hint="@string/hintEdtusername"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:maxLength="30"
        android:textSize="16sp"
        android:layout_above="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="" />
    <TextView
        android:id="@+id/txtPassword"
        android:text="@string/txtPasswordLogin"
        android:textSize="18sp"
        android:textColor="#232222"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_above="@+id/edtPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtPasswordLogin"
        android:textSize="16sp"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="18dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:maxLength="30"
        android:hint="@string/hintEdtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="" />


    <com.rey.material.widget.CheckBox
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:gravity="center"
        app:cbd_tickColor="@color/white"
        app:cbd_strokeColor="@android:color/holo_orange_dark"
        android:textColor="@android:color/holo_orange_dark"
        android:id="@+id/cbRememberLogin"
        android:text="@string/cb_remember"
        style="@style/Material.Drawable.CheckBox"
        android:layout_below="@id/edtPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txtSignUp"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:textColor="@color/black"
        android:layout_below="@id/edtPasswordLogin"
        android:text="@string/btn_SignUp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btn_login"
        android:textColor="#FFF"
        android:layout_marginHorizontal="25dp"
        android:layout_below="@+id/edtPasswordLogin"
        android:layout_marginTop="130dp"
        android:background="@drawable/bg_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>