<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardCornerRadius="6dp"
    app:cardUseCompatPadding="true"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingVertical="8dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/txt_name_piority"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtNamePiority"
                android:text="@string/txt_show_name_piority"
                android:gravity="center"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:paddingVertical="8dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/txt_date_category"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtDateCreatePiority"
                android:text="@string/txt_show_date_category"
                android:textSize="18sp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>