<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNamenewPiority"
            android:hint="@string/hint_name_new_category"
            android:textColorHint="@color/colorPrimary"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            android:inputType="text"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAddnewPiority"
                android:text="@string/btn_add"
                android:textColor="#FFF"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/bg_button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnCancelAddPiority"
                android:text="@string/btn_cancel"
                android:textColor="#FFF"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>